# AutoPricer-Vehicle-Buy-Price-Optimiser

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  api_health.json  api_quote.json  docker-compose.yml  docker_status.txt  pyproject.toml  python_quality.txt  repo_sanity.txt  requirements.txt  test_api_script.py  walkthrough.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: dvla.py  main.py  optimiser.py  schemas.py
dashboard/: app.py
data/seed/: generate.py
data/seed/assets/: makes_models.json
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/: schema.yml  sources.yml
dbt/models/marts/: mart_training_set.sql
dbt/models/staging/: stg_enquiries.sql  stg_regions.sql  stg_sales.sql  stg_vehicles.sql
infra/docker/: Dockerfile.api  Dockerfile.dashboard
pipelines/evaluate/: evaluate.py
pipelines/features/: build_features.py
pipelines/ingest/: load.py
pipelines/monitor/: alerts.py  drift.py  performance.py
pipelines/train/: train_conversion_model.py  train_price_model.py
reports/: pricing_policy.md
tests/: test_api.py  test_optimiser.py
