[project]
name = "autopricer"
version = "0.1.0"
description = "Vehicle Buy-Price Optimiser"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
env = [
    "MODEL_SOURCE=mock"
]
